--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fireflyy13.github.io/FrontEnd_Labs/my-app/",
+  "homepage": "https://fireflyy13.github.io/FrontEnd_Labs/my-app",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
