--- a/lab7_1/package.json
+++ b/lab7_1/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fireflyy13.github.io/FrontEnd_Labs/my-app",
+  "homepage": "https://fireflyy13.github.io/FrontEnd_Labs/lab7_1_build",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build -b gh-pages -f"
   },
   "eslintConfig": {
     "extends": [
